force-app/main/default/objects/Account/fields/Actual_service_alternative__c.field-meta.xml
<CustomField>
    <fullName>Actual_service_alternative__c</fullName>
    <label>Actual service alternative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>