force-app/main/default/objects/Account/fields/AddressChange__c.field-meta.xml
<CustomField>
    <fullName>AddressChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSPhase2 Dinesh Label Change 26/12/2016</description>
    <label>Change of Address Information</label>
    <referenceTo>ForwardingAddressChange__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>