force-app/main/default/objects/Account/fields/Agreement_Proposition_Ready__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Proposition_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Proposition Ready</label>
    <type>Checkbox</type>
</CustomField>