force-app/main/default/objects/Account/fields/Agreement_Proposition_Ready_formula__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Proposition_Ready_formula__c</fullName>
    <formula>Parent.Agreement_Proposition_Ready__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Proposition Ready - F</label>
    <type>Checkbox</type>
</CustomField>