force-app/main/default/objects/Account/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <label>API Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ikke oppdatert</fullName>
            </value>
            <value>
                <fullName>Oppdatert</fullName>
            </value>
            <value>
                <fullName>Tvetydig</fullName>
            </value>
            <value>
                <fullName>Ikke nok grunnlag</fullName>
            </value>
            <value>
                <fullName>Ikke relevant</fullName>
                <default>true</default>
                <label>Ikke relevant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>