force-app/main/default/objects/Account/fields/Bankkontonummer__c.field-meta.xml
<CustomField>
    <fullName>Bankkontonummer__c</fullName>
    <description>Account number


CSPhase2 Dinesh Label Change 26/12/2016</description>
    <label>Bank account number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>