force-app/main/default/objects/Account/fields/Bring_Industry__c.field-meta.xml
<CustomField>
    <fullName>Bring_Industry__c</fullName>
    <label>Bring Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cars</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Furniture and interior</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Agiculture and forestry</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>Clothes, Textiles, Shoes</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Alcoholic beverage</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Advertising, design and communication</fullName>
            </value>
            <value>
                <fullName>Plastic and rubber</fullName>
            </value>
            <value>
                <fullName>VVS</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Oil and offshore</fullName>
            </value>
            <value>
                <fullName>Transport and distribution</fullName>
            </value>
            <value>
                <fullName>Maritime industry</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Petroleum</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Recycling</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>