force-app/main/default/objects/Account/fields/CDH_customer_number_converted__c.field-meta.xml
<CustomField>
    <fullName>CDH_customer_number_converted__c</fullName>
    <label>CDH Customer Number (Converted)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>