force-app/main/default/objects/Account/fields/check_customer_and_account_no__c.field-meta.xml
<CustomField>
    <fullName>check_customer_and_account_no__c</fullName>
    <formula>If( AccountNumber !=  crm_Customer_Number__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check customer and account no</label>
    <type>Checkbox</type>
</CustomField>