force-app/main/default/objects/Account/fields/check_customer_party__c.field-meta.xml
<CustomField>
    <fullName>check_customer_party__c</fullName>
    <formula>if( crm_Customer_Number__c != Party_number__c , true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check customer party</label>
    <type>Checkbox</type>
</CustomField>