force-app/main/default/objects/Account/fields/Conga_Trigger_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Trigger_URL__c</fullName>
    <description>&quot;&amp;Id=&quot; &amp; Id
&amp;
&quot;&amp;QueryId=[crossreference]a1H2X000008nixf,[opptyservicesalt1]a1H2X000008nixk,[vasalt1]a1H2X000008nixp,[surchargealt1]a1H2X000008nixu&quot;
&amp;
&quot;&amp;TemplateId=a0W2X00000QVaFy&quot;
&amp;
&quot;&amp;QMode=SendEmail&quot;
&amp;
&quot;&amp;DefaultPDF=1&quot;
&amp;
&quot;&amp;Qvar0Id=a1H2X000008nvie&amp;Qvar0Format=10000&quot;
&amp;
&quot;&amp;CongaEmailTemplateId=a0V2X00000LHvxh&amp;EmailToId=&quot; &amp; Primary_contact__c
&amp;
&quot;&amp;SC0=1&amp;SC1=SalesforceFile&quot;
&amp;
&quot;&amp;OFN=Dine rabattsatser&quot;
&amp;
&quot;&amp;UF0=1&amp;MFTS0=Is_Conversion_Email_Sent__c&amp;MFTSValue0=True&quot;</description>
    <formula>&quot;&amp;Id=&quot;+Id+
&quot;&amp;QueryId=[crossreference]a1H2X000008nixf,[opptyservicesalt1]a1H2X000008nixk,[vasalt1]a1H2X000008nixp,[surchargealt1]a1H2X000008nixu&quot;+
&quot;&amp;TemplateId=a0W2X00000QVaFy&quot;+
&quot;&amp;QMode=SendEmail&quot;+
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;Qvar0Id=a1H2X000008nvie&quot;+
&quot;&amp;Qvar0Format=10000&quot;+
&quot;&amp;CongaEmailTemplateId=a0V2X00000LHvxh&quot;+
&quot;&amp;EmailToId=&quot;+Primary_contact__c+
&quot;&amp;SC0=1&quot;+
&quot;&amp;SC1=SalesforceFile&quot;+
&quot;&amp;OFN=Dine rabattsatser&quot;+
&quot;&amp;UF0=1&quot;+
&quot;&amp;MFTS0=Is_Conversion_Email_Sent__c&quot;+
&quot;&amp;MFTSValue0=True&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Trigger URL</label>
    <type>Text</type>
</CustomField>