force-app/main/default/objects/Account/fields/Connected_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Connected_Agreements__c</fullName>
    <label>Connected Agreements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>