force-app/main/default/objects/Account/fields/Conversion_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Email_Sent__c</fullName>
    <label>Conversion Email Sent</label>
    <type>Date</type>
</CustomField>