force-app/main/default/objects/Account/fields/Conversion_Ready__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Ready</label>
    <type>Checkbox</type>
</CustomField>