force-app/main/default/objects/Account/fields/Conversion_Ready_formula__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Ready_formula__c</fullName>
    <formula>Parent.Conversion_Ready__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Ready - F</label>
    <type>Checkbox</type>
</CustomField>