force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hovedstaden</fullName>
            </value>
            <value>
                <fullName>Sjælland</fullName>
            </value>
            <value>
                <fullName>Midtjylland</fullName>
            </value>
            <value>
                <fullName>Syddanmark</fullName>
            </value>
            <value>
                <fullName>Nordjylland</fullName>
            </value>
            <value>
                <fullName>AKERSHUS</fullName>
            </value>
            <value>
                <fullName>AUST-AGDER</fullName>
            </value>
            <value>
                <fullName>BUSKERUD</fullName>
            </value>
            <value>
                <fullName>FINNMARK</fullName>
            </value>
            <value>
                <fullName>HEDMARK</fullName>
            </value>
            <value>
                <fullName>HORDALAND</fullName>
            </value>
            <value>
                <fullName>MØRE OG ROMSDAL</fullName>
            </value>
            <value>
                <fullName>NORDLAND</fullName>
            </value>
            <value>
                <fullName>NORD-TRØNDELAG</fullName>
            </value>
            <value>
                <fullName>OPPLAND</fullName>
            </value>
            <value>
                <fullName>OSLO</fullName>
            </value>
            <value>
                <fullName>ØSTFOLD</fullName>
            </value>
            <value>
                <fullName>ROGALAND</fullName>
            </value>
            <value>
                <fullName>SOGN OG FJORDANE</fullName>
            </value>
            <value>
                <fullName>SØR-TRØNDELAG</fullName>
            </value>
            <value>
                <fullName>SVALBARD</fullName>
            </value>
            <value>
                <fullName>TELEMARK</fullName>
            </value>
            <value>
                <fullName>TROMS</fullName>
            </value>
            <value>
                <fullName>VEST-AGDER</fullName>
            </value>
            <value>
                <fullName>VESTFOLD</fullName>
            </value>
            <value>
                <fullName>GÄVLEBORG</fullName>
            </value>
            <value>
                <fullName>STOCKHOLM</fullName>
            </value>
            <value>
                <fullName>VÄSTRA GÖTALAND</fullName>
            </value>
            <value>
                <fullName>SKÅNE</fullName>
            </value>
            <value>
                <fullName>VÄSTERNORRLAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>