force-app/main/default/objects/Account/fields/crm_3rd_Party_Contract__c.field-meta.xml
<CustomField>
    <fullName>crm_3rd_Party_Contract__c</fullName>
    <label>3rd Party Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOL</fullName>
            </value>
            <value>
                <fullName>Toplogic</fullName>
            </value>
            <value>
                <fullName>Transportrådgiverne</fullName>
                <label>Transport advisors</label>
            </value>
            <value>
                <fullName>Visma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>