force-app/main/default/objects/Account/fields/crm_Account_Inserted__c.field-meta.xml
<CustomField>
    <fullName>crm_Account_Inserted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a part of data migration</description>
    <label>Account Inserted</label>
    <type>Checkbox</type>
</CustomField>