force-app/main/default/objects/Account/fields/crm_Account_Number_Unique__c.field-meta.xml
<CustomField>
    <fullName>crm_Account_Number_Unique__c</fullName>
    <description>USE ONLY FOR DATA MIGRATION</description>
    <label>Account Number - Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>