force-app/main/default/objects/Account/fields/crm_Account_Updated__c.field-meta.xml
<CustomField>
    <fullName>crm_Account_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a part of data migration</description>
    <label>Account Updated</label>
    <type>Checkbox</type>
</CustomField>