force-app/main/default/objects/Account/fields/crm_Active_Relation_Account__c.field-meta.xml
<CustomField>
    <fullName>crm_Active_Relation_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field signifies that this is an Active relation accounts either imported as a part of data migration from Caesar or from interfaces with FKB/SAS Dwh/ICC/CDH.</description>
    <label>Active Relation Account</label>
    <type>Checkbox</type>
</CustomField>