force-app/main/default/objects/Account/fields/crm_Addressee__c.field-meta.xml
<CustomField>
    <fullName>crm_Addressee__c</fullName>
    <label>Adressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>