force-app/main/default/objects/Account/fields/crm_Agreement_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>crm_Agreement_Contract_Value__c</fullName>
    <description>This will be calculated when the agreement is created/updated</description>
    <inlineHelpText>This will be calculated when the agreement is created/updated</inlineHelpText>
    <label>Agreement Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>