force-app/main/default/objects/Account/fields/crm_Allocated_Number_Sequence__c.field-meta.xml
<CustomField>
    <fullName>crm_Allocated_Number_Sequence__c</fullName>
    <label>Allocated Number Sequence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>