force-app/main/default/objects/Account/fields/crm_Annual_Meeting_Target__c.field-meta.xml
<CustomField>
    <fullName>crm_Annual_Meeting_Target__c</fullName>
    <label>Annual Meeting Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>