force-app/main/default/objects/Account/fields/crm_Annual_Sales_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>crm_Annual_Sales_Local_Currency__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Annual Sales Local Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>