force-app/main/default/objects/Account/fields/crm_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>crm_Billing_City__c</fullName>
    <label>Billing City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>