force-app/main/default/objects/Account/fields/crm_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>crm_Billing_State_Province__c</fullName>
    <label>Billing State/Province</label>
    <length>150</length>
    <type>Text</type>
</CustomField>