force-app/main/default/objects/Account/fields/crm_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>crm_Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>