force-app/main/default/objects/Account/fields/crm_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>crm_Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>