force-app/main/default/objects/Account/fields/crm_Brand__c.field-meta.xml
<CustomField>
    <fullName>crm_Brand__c</fullName>
    <formula>IF( ISBLANK( crm_Brand_Logo_URL__c), &quot; &quot;,  IMAGE( crm_Brand_Logo_URL__c , &quot;Client Brand&quot;, 100, 200) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>