force-app/main/default/objects/Account/fields/crm_Brand_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>crm_Brand_Logo_URL__c</fullName>
    <label>Brand Logo URL</label>
    <type>Url</type>
</CustomField>