force-app/main/default/objects/Account/fields/crm_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>crm_Brand_Name__c</fullName>
    <description>field for wave implementation

CSPhase2 Dinesh Label Change 26/12/2016</description>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COOP OBS</fullName>
            </value>
            <value>
                <fullName>Mega</fullName>
            </value>
            <value>
                <fullName>Nille</fullName>
            </value>
            <value>
                <fullName>Arbeids- og inkluderingsdepartementet</fullName>
                <label>Ministry of Labour and Social Inclusion</label>
            </value>
            <value>
                <fullName>Utenriksdepartementet</fullName>
                <label>Ministry of Foreign Affairs</label>
            </value>
            <value>
                <fullName>Barne-, likestillings- og inkluderingsdepartementet</fullName>
                <label>Ministry of Children, Equality and Social Inclusion</label>
            </value>
            <value>
                <fullName>Fiskeri- og kystdepartementet</fullName>
                <label>Ministry of Fisheries and Coastal Affairs</label>
            </value>
            <value>
                <fullName>Fornyings- og administrasjons- departementet</fullName>
                <label>Ministry of Government Administration and Reform</label>
            </value>
            <value>
                <fullName>Forsvarsdepartementet</fullName>
                <label>Ministry of Defence</label>
            </value>
            <value>
                <fullName>Helse- og omsorgsdepartementet</fullName>
                <label>Ministry of Health</label>
            </value>
            <value>
                <fullName>Justis- og politidepartementet</fullName>
                <label>Ministry of Justice</label>
            </value>
            <value>
                <fullName>Kommunal- og regional- departementet</fullName>
                <label>Local and Regional Department</label>
            </value>
            <value>
                <fullName>Kultur- og kirkedepartementet</fullName>
                <label>Ministry of Culture and Church</label>
            </value>
            <value>
                <fullName>Kunnskapsdepartementet</fullName>
                <label>Ministry of Competence</label>
            </value>
            <value>
                <fullName>Landbruks- og matdepartementet</fullName>
                <label>Ministry of Agriculture and Food</label>
            </value>
            <value>
                <fullName>Miljøverndepartementet</fullName>
                <label>Ministry of Environment</label>
            </value>
            <value>
                <fullName>Nærings- og handelsdepartementet</fullName>
                <label>Ministry of commerce and trade</label>
            </value>
            <value>
                <fullName>Olje- og energidepartementet</fullName>
                <label>Ministry of Oil and Energy</label>
            </value>
            <value>
                <fullName>Samferdselsdepartementet</fullName>
                <label>Ministry of Transport</label>
            </value>
            <value>
                <fullName>Finansdepartementet</fullName>
                <label>Ministry of Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>