force-app/main/default/objects/Account/fields/crm_Bulk_invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>crm_Bulk_invoice_Frequency__c</fullName>
    <label>Bulk invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>