force-app/main/default/objects/Account/fields/crm_bus_addr_City__c.field-meta.xml
<CustomField>
    <fullName>crm_bus_addr_City__c</fullName>
    <description>Business Address</description>
    <label>Business Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>