force-app/main/default/objects/Account/fields/crm_bus_addr_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>crm_bus_addr_Zip_Code__c</fullName>
    <label>Business Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>