force-app/main/default/objects/Account/fields/crm_Caesar_PartyId__c.field-meta.xml
<CustomField>
    <fullName>crm_Caesar_PartyId__c</fullName>
    <externalId>true</externalId>
    <label>Caesar PartyId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>