force-app/main/default/objects/Account/fields/crm_Caesar_RelationId__c.field-meta.xml
<CustomField>
    <fullName>crm_Caesar_RelationId__c</fullName>
    <externalId>true</externalId>
    <label>Caesar RelationId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>