force-app/main/default/objects/Account/fields/crm_CDH_RowId__c.field-meta.xml
<CustomField>
    <fullName>crm_CDH_RowId__c</fullName>
    <description>Stores the rowId of accounts coming from CDH</description>
    <externalId>true</externalId>
    <label>CDH RowId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>