force-app/main/default/objects/Account/fields/CRM_CDH_ROWID_new__c.field-meta.xml
<CustomField>
    <fullName>CRM_CDH_ROWID_new__c</fullName>
    <label>CRM_CDH_ROWID_new</label>
    <length>255</length>
    <type>Text</type>
</CustomField>