force-app/main/default/objects/Account/fields/crm_Company_bank_name__c.field-meta.xml
<CustomField>
    <fullName>crm_Company_bank_name__c</fullName>
    <label>Company bank name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>