force-app/main/default/objects/Account/fields/crm_Company_Footer_Image__c.field-meta.xml
<CustomField>
    <fullName>crm_Company_Footer_Image__c</fullName>
    <label>Company Footer Image</label>
    <type>Url</type>
</CustomField>