force-app/main/default/objects/Account/fields/crm_Company_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>crm_Company_Group_Name__c</fullName>
    <label>Company Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>Active Brands</fullName>
            </value>
            <value>
                <fullName>Aga</fullName>
            </value>
            <value>
                <fullName>Ahlsell</fullName>
            </value>
            <value>
                <fullName>Aker Solutions</fullName>
            </value>
            <value>
                <fullName>Akzo Nobel</fullName>
            </value>
            <value>
                <fullName>Alfa Laval</fullName>
            </value>
            <value>
                <fullName>Alliance Healthcare</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Amedia</fullName>
            </value>
            <value>
                <fullName>Apokjeden</fullName>
            </value>
            <value>
                <fullName>Arla Foods</fullName>
            </value>
            <value>
                <fullName>Assa Abloy</fullName>
            </value>
            <value>
                <fullName>Astra Zeneca</fullName>
            </value>
            <value>
                <fullName>Atria</fullName>
            </value>
            <value>
                <fullName>Autoliv</fullName>
            </value>
            <value>
                <fullName>Axfood</fullName>
            </value>
            <value>
                <fullName>Baker Hughes</fullName>
            </value>
            <value>
                <fullName>Bama</fullName>
            </value>
            <value>
                <fullName>BASF</fullName>
            </value>
            <value>
                <fullName>Baxter - Gambro</fullName>
            </value>
            <value>
                <fullName>Bergendahl &amp; Son</fullName>
            </value>
            <value>
                <fullName>Bertel O Steen</fullName>
            </value>
            <value>
                <fullName>Bestseller</fullName>
            </value>
            <value>
                <fullName>Bohus</fullName>
            </value>
            <value>
                <fullName>Bonnier</fullName>
            </value>
            <value>
                <fullName>Boozt</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Brandsdal Group</fullName>
            </value>
            <value>
                <fullName>Carat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>