force-app/main/default/objects/Account/fields/crm_Company_Header_image__c.field-meta.xml
<CustomField>
    <fullName>crm_Company_Header_image__c</fullName>
    <label>Company Header image</label>
    <type>Url</type>
</CustomField>