force-app/main/default/objects/Account/fields/crm_Company_IBAN__c.field-meta.xml
<CustomField>
    <fullName>crm_Company_IBAN__c</fullName>
    <label>Company IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>