force-app/main/default/objects/Account/fields/crm_Company_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>crm_Company_SWIFT__c</fullName>
    <label>Company SWIFT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>