force-app/main/default/objects/Account/fields/crm_Consignor_Ticket__c.field-meta.xml
<CustomField>
    <fullName>crm_Consignor_Ticket__c</fullName>
    <label>Consignor Ticket</label>
    <length>20</length>
    <type>Text</type>
</CustomField>